--- a/Saylani Website/style.css
+++ b/Saylani Website/style.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 marquee{
     margin-top: 12px;
     background-color: #316DC3; 
@@ -7,7 +12,7 @@ marquee{
 }
 .carousel-inner img {
     width: 100%;
-    height: 80%;
+    height: 50%;
 }
 .mid-container{
     text-align: center;
@@ -20,4 +25,29 @@ marquee{
     display: flex;
     justify-content: space-evenly;
     background-color: rgba(36, 79, 242, 0.8) !important;
+}
+.menu-bar{
+    text-align: center;
+}
+.menu-bar ul{
+    display: inline-flex;
+    list-style: none;
+}
+.menu-bar ul li{
+    width: 100px;
+    margin: 10px;
+    padding: 10px;
+}
+.menu-bar img{
+   float: left;
+   margin-left: 100px;
+}
+.menu-bar ul li a{
+    text-decoration: none;
+    color: black;
+}
+.active,.menu-bar ul li:hover{
+    background: #316DC3;
+    border-radius: 15px;
+    color: white;
 }
