--- a/Saylani Website/style.css
+++ b/Saylani Website/style.css
@@ -3,6 +3,27 @@
     margin: 0;
     box-sizing: border-box;
 }
+.nav-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: #316dc3;
+    color: white;
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.nav-bar i{
+    width: 40px;
+    color: white;
+}
+.nav-btn{
+    padding: 10px 24px;
+    border: 0;
+    border-radius: 5px;
+
+}
 marquee{
     margin-top: 12px;
     background-color: #316DC3; 
@@ -63,9 +84,41 @@ marquee{
 .text-center {
     text-align: center;
 }
-div {
-    display: block;
+
+.img-glry{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+
 }
-* {
-    box-sizing: border-box;
+.footer-content{
+    width: 100%;
+    height: 350px;
+    background-color: #25272e;
+    color: #fff;
+    padding: 80px;
+    margin-top: 70px;
+}
+.footer-social-icons{
+    float: right;
+    padding-left: 100px;
+
+}
+.footer-social-icons i{
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+    background: #316dc3;
+}
+
+
+footer{
+    width: 100%;
+    height: 40px;
+    background-color: #316dc3 ;
+    color: white;
+    padding: 10px;
+    text-align: center;
+
 }
